# aaiclick

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BACKEND_COMPATIBILITY.md  CLAUDE.md  LICENSE  README.md  TEST_UPDATE_GUIDE.md  alembic.ini  conftest.py  docker-compose.yml  mkdocs.yml  plan.md  pyproject.toml  pyrightconfig.json  setup.sh  technical_gaps.md  test.sh  test_hook.db
.claude/: settings.json
.claude/skills/: README.md  gh-actions.md
.github/scripts/: generate_summary.py
.github/workflows/: benchmark.yaml  generate-migration.yaml  lint.yaml  project-ai-tests.yaml  project-basic-lineage.yaml  project-basic-worker.yaml  project-cyber-threat-feeds.yaml  project-imdb-dataset-builder.yaml  project-nyc-taxi-pipeline.yaml  publish.yaml  run-all-projects.yaml  test.yaml
aaiclick/: __init__.py  __main__.py  aai_dtypes.py  adapter.py  backend.py  ch_client.py  cli_renderers.py  client.py  config.py  conftest.py  context.py  data_context.py  data_extraction.py  decorator.py  env.py  example_runner.py  factories.py  flow.py  ingest.py  locks.py  models.py  object.md  object.py  operators.md  operators.py  orch_context.py  snowflake.py  snowflake_id.py  sql_template_loader.py  test_examples.py  test_locks.py  test_snowflake.py  test_utils.py  testing.py  view_models.py
aaiclick/ai/: __init__.py  config.py  conftest.py  oplog.py  provider.py  test_oplog.py  test_provider.py  test_provider_live.py
aaiclick/benchmarks/: __init__.py  operators.py  test_benchmarks.py
aaiclick/data/: __init__.py  ch_client.py  chdb_client.py  cli.py  clickhouse_client.py  conftest.py  data_context.py  data_extraction.py  env.py  formats.py  ingest.py  lifecycle.py  models.py  object.md  object.py  operators.md  operators.py  scope.py  snowflake.py  sql_utils.py  table_worker.py  test_aggregation.py  test_aggregation_table.py  test_concat_parametrized.py  test_context.py  test_copy_parametrized.py  test_creation_parametrized.py  test_datetime.py  test_dict_selector.py  test_engine.py  test_explode.py  test_group_by.py  test_ingest.py  test_insert_parametrized.py  test_lifecycle.py  test_metadata.py  test_nested_arrays.py  test_nullable.py  test_object_lifecycle.py  test_operator_large.py  (+30 more)
aaiclick/data_extra_tests/: test_lifecycle.py  test_persistent.py  test_persistent_requires_orch.py
aaiclick/example_notebooks/: CLAUDE.md
aaiclick/example_projects/: CLAUDE.md  __init__.py  basic_worker.sh  basic_worker_register.py  test_basic_worker.py
aaiclick/example_projects/imdb_dataset_builder/: README.md  __init__.py  __main__.py  constants.py  imdb_dataset_builder.sh  models.py  pyproject.toml  report.py  requirements.txt
aaiclick/example_projects/imdb_dataset_builder/imdb_dataset_builder/: __init__.py  __main__.py  constants.py  finetune_colab.ipynb  models.py  report.py  wikipedia.py
aaiclick/examples/: CLAUDE.md  __init__.py  aggregation_table.py  array_operators.py  basic_operators.py  data_manipulation.py  explode.py  group_by.py  isin.py  nested_arrays.py  nullable.py  orchestration_basic.py  orchestration_dynamic.py  orchestration_map.py  order_by.py  persistent.py  run_all.py  selectors.py  statistics.py  transforms.py  views.py
aaiclick/game/: __init__.py  combat.py  skills.py  test_e2e.py  test_skills.py
aaiclick/internal_api/: __init__.py  errors.py  jobs.py  lineage.py  lineage_ai.py  objects.py  pagination.py  registered_jobs.py  setup.py  tasks.py  test_jobs.py  test_lineage.py  test_objects.py  test_registered_jobs.py  test_setup.py  test_tasks.py  test_workers.py  workers.py
aaiclick/lineage/: __init__.py  collector.py  graph.py  models.py  test_collector.py  test_graph.py
aaiclick/oplog/: __init__.py  cleanup.py  collector.py  conftest.py  graph.py  lineage.py  lineage_forest.py  models.py  oplog.py  oplog_api.py  sampling.py  test_collector.py  test_graph.py  test_lineage_forest.py  test_sampling.py  triage.py  view_models.py
aaiclick/orchestration/: __init__.py  alembic.ini  claiming.py  cli.py  conftest.py  context.py  database.py  db_handler.py  db_lifecycle.py  debug_execution.py  decorators.py  dynamic.py  env.py  execution.py  factories.py  handles.py  job_queries.py  job_stats.py  lineage.py  local_runtime.py  logging.py  migrate.py  models.py  operators.py  oplog_backfill.py  orch_context.py  orch_helpers.py  pg_cleanup.py  pg_handler.py  pg_lifecycle.py  registered_jobs.py  replay.py  result.py  sql_context.py  sqlite_handler.py  task_registry.py  test_cancel_job.py  test_claim_task.py  (+27 more)
contrib/: claude_mcp_setup.py  mcp.json
docs/: LICENSE.md  aaiclick.md  abstract_lifecycle_plan.md  ai.md  ai_layer_plan.md  ai_layer_spec.md  api_server.md  api_server_implementation_plan.md  array_type_implementation_plan.md  compare_aaiclick_docs.md  cyber_threat_feeds.md  data_context.md  debugging.md  distributed_sorting_implementation_plan.md  distributed_sorting_research.md  docs_implementation_plan.md  dynamic_tasks.md  example_projects.md  explode.md  future.md  game.md  getting_started.md  glossary.md  index.md  insert_advisory_lock.md  join.md  join_implementation_plan.md  known_gaps.md  lineage.md  lineage_3_phases.md  lineage_3_phases_implementation_plan.md  lineage_implementation_plan.md  object.md  object_lifecycle.md  object_lifecycle_implementation_plan.md  oplog.md  oplog_lineage_plan.md  orchestration.md  orchestration_implementation_plan.md  public_datasets_research.md  (+8 more)
scripts/: setup_and_test.py
tests/: __init__.py  conftest.py  test_backend_compatibility.py  test_concat_parametrized.py  test_context.py  test_copy_parametrized.py  test_creation_parametrized.py  test_data_method.py  test_examples.py  test_ingest.py  test_insert_parametrized.py  test_object_add.py  test_operator_large.py  test_operators_parametrized.py  test_orchestration_execution.py  test_orchestration_factories.py  test_snowflake.py  test_sql_template_loader.py  test_statistics.py  test_statistics_parametrized.py  test_temporal_ordering.py  test_type_bool.py  test_type_dict.py  test_type_float.py  test_type_int.py  test_type_mixed.py  test_type_str.py  test_view.py
(+376 files in other folders)
