[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aaiclick"
dynamic = ["version"]
description = "A Python framework that translates Python code into ClickHouse operations for big data computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "aaiclick Contributors"}
]
keywords = ["clickhouse", "big data", "database", "analytics", "data processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "chdb>=4.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
clickhouse = [
    "clickhouse-connect>=0.6.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
ai = [
    "litellm>=1.0",
    "ollama>=0.1.0",
]
all = ["aaiclick[clickhouse,postgres,ai]"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
]
dev = [
    "aaiclick[all,test]",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kolodkin/aaiclick"
Repository = "https://github.com/kolodkin/aaiclick"
Issues = "https://github.com/kolodkin/aaiclick/issues"

[tool.setuptools.packages.find]
include = ["aaiclick*"]

[tool.setuptools.package-data]
aaiclick = ["py.typed"]
"aaiclick.orchestration" = ["alembic.ini"]
"aaiclick.orchestration.migrations" = ["script.py.mako"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=aaiclick --cov-report=term-missing --cov-report=html --strict-markers -W error"
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
markers = [
    "live_llm: tests that call a real LLM — requires AAICLICK_AI_LIVE_TESTS=1 and a reachable model",
]
