[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aaiclick"
dynamic = ["version"]
description = "A Python framework that translates Python code into ClickHouse operations for big data computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "aaiclick Contributors"}
]
keywords = ["clickhouse", "big data", "database", "analytics", "data processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "clickhouse-connect>=0.6.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
orch = [
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
]
local = [
    "chdb>=4.0.0",
    "aiosqlite>=0.19.0",
]
ai = [
    "litellm>=1.0",
]
dev = [
    "aaiclick[orch,test,local]",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kolodkin/aaiclick"
Repository = "https://github.com/kolodkin/aaiclick"
Issues = "https://github.com/kolodkin/aaiclick/issues"

[tool.setuptools.packages.find]
include = ["aaiclick*"]

[tool.setuptools.package-data]
aaiclick = ["py.typed"]
"aaiclick.orchestration" = ["alembic.ini"]
"aaiclick.orchestration.migrations" = ["script.py.mako"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports in __init__.py are intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=aaiclick --cov-report=term-missing --cov-report=html --strict-markers -W error"
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
markers = [
    "live_llm: tests that call a real LLM — requires AAICLICK_AI_LIVE_TESTS=1 and a reachable model",
]
